# reading-assistant

./: .gitignore  main.py
backend/: config.py  langgraph_history.db-shm  langgraph_history.db-wal  main.py  pyproject.toml
backend/agents/: reading_notes_agent.py
backend/api/: server_run.py
backend/api/routes/: history_api.py  reading_notes_api.py
backend/data/: reading_assistant.db
backend/llm/: simple_llm_client.py
backend/models/: schemes.py
backend/rag/: rag_pipeline.py
backend/storage/: conversation_history_dao.py  database.py  reading_history_dao.py  sqlite_api.py
examples/: 《Python深度学习（第2版）》.md
frontend/: index.html  package-lock.json
frontend/src/: App.css  App.jsx  index.css
