[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.3"
dependencies = [
    "fastapi>=0.136.1",
    "fastembed>=0.8.0",
    "langchain>=1.2.18",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.2",
    "langchain-qdrant>=1.1.0",
    "langchain-text-splitters>=1.1.2",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.9",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.4.1",
    "uvicorn>=0.46.0",
]
